--- a/themes/hk-union.css
+++ b/themes/hk-union.css
@@ -28,6 +28,7 @@ legend, .ui-input-text input, .ui-input-search input {
 /*Styling of boxes on the fourth page */
 .boxes {
     width: 45%;
+    height: 100px;
     float: left;
     position: relative;
     text-align: center;
