--- a/themes/hk-union.css
+++ b/themes/hk-union.css
@@ -25,35 +25,7 @@ legend, .ui-input-text input, .ui-input-search input {
     color: inherit;
     text-shadow: inherit;
 }
-/*Styling of boxes on the fourth page */
-h2 {
-    position: relative;
-    text-align: center;
-}
-.boxes {
-    background-color: #edece6;
-    width: 45%;
-    height: 80px;
-    float: left;
-    position: relative;
-    text-align: center;
-    border-color: #292d40;
-    border-style: solid;
-    margin: 1.5%;
-}
-.boxes h3 {
-    font-size: 90%;
-    color: #292d40;
-}
-.boxes p {
-    color: black;
-    font-size: 80%;
-    position: absolute;
-    top: 25%;
-    left: 5%;
-    right: 5%;
-    padding-top: 7%;
-}
+
 /* Form labels (overrides font-weight bold in bars, and mini font-size) */
 .ui-mobile label, div.ui-controlgroup-label {
     font-weight: normal;
@@ -257,10 +229,10 @@ h2 {
 /* Button up */
 .ui-page-theme-a .ui-btn, html .ui-bar-a .ui-btn, html .ui-body-a .ui-btn, html body .ui-group-theme-a .ui-btn, html head + body .ui-btn.ui-btn-a, /* Button visited */
 .ui-page-theme-a .ui-btn:visited, html .ui-bar-a .ui-btn:visited, html .ui-body-a .ui-btn:visited, html body .ui-group-theme-a .ui-btn:visited, html head + body .ui-btn.ui-btn-a:visited {
-    background-color: #2a7286 /*{a-bup-background-color}*/;
-    border-color: #195869 /*{a-bup-border}*/;
-    color: #ffffff /*{a-bup-color}*/;
-    text-shadow: 0 /*{a-bup-shadow-x}*/ 1px /*{a-bup-shadow-y}*/ 0 /*{a-bup-shadow-radius}*/ #727272 /*{a-bup-shadow-color}*/;
+    background-color: #e3e3e3 /*{a-bup-background-color}*/;
+    border-color: #f9f9f9 /*{a-bup-border}*/;
+    color: #7e858a /*{a-bup-color}*/;
+    text-shadow: 0 /*{a-bup-shadow-x}*/ 0 /*{a-bup-shadow-y}*/ 0 /*{a-bup-shadow-radius}*/ #727272 /*{a-bup-shadow-color}*/;
 }
 /* Button hover */
 .ui-page-theme-a .ui-btn:hover, html .ui-bar-a .ui-btn:hover, html .ui-body-a .ui-btn:hover, html body .ui-group-theme-a .ui-btn:hover, html head + body .ui-btn.ui-btn-a:hover {
@@ -321,4 +293,41 @@ h2 {
 .ui-noboxshadow .ui-btn:focus, .ui-noboxshadow .ui-focus {
     outline-width: 1px;
     outline-style: auto;
+}
+/*Styling of boxes on the fourth page -----------------------------------------------------------------------------------------------------------*/
+h2 {
+    position: relative;
+    text-align: center;
+}
+.boxes {
+    background-color: #edece6;
+    width: 45%;
+    height: 80px;
+    float: left;
+    position: relative;
+    text-align: center;
+    border-color: #292d40;
+    border-style: solid;
+    margin: 1.5%;
+}
+.boxes h3 {
+    font-size: 90%;
+    color: #292d40;
+}
+.boxes p {
+    color: black;
+    font-size: 80%;
+    position: absolute;
+    top: 25%;
+    left: 5%;
+    right: 5%;
+    padding-top: 7%;
+}
+a#log-in {
+	background-color: #1f9de0;
+	color: #ffffff;
+}
+a#sign-up {
+	background-color: #292d40;
+	color: #ffffff;
 }
