--- a/themes/hk-union.css
+++ b/themes/hk-union.css
@@ -347,3 +347,12 @@ a#footer-link {
 a .back-button {
 	background-color: #c9c7c7;
 }
+img#hk-logo {
+	max-width: 50%;
+	padding-left: 25%;
+	margin-top: 2%;
+}
+img#cover-photo {
+	max-width: 90%;
+	padding-left: 5%;
+}
